--- a/DeeFyPlay/DeeFyPlay.csproj
+++ b/DeeFyPlay/DeeFyPlay.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
