--- a/DeeFyPlay/DeeFyPlay.csproj
+++ b/DeeFyPlay/DeeFyPlay.csproj
@@ -18,5 +18,7 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://docs.gradle.com/enterprise/admin/schema/gradle-enterprise-config-schema-3.json" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
